# day3_vinai_lab3_nhom6_e402

./: .env.example  .gitignore  AGENTS.md  BEFORE_AFTER_COMPARISON.md  BUG_LOG.md  HANDOFF_API_PROVIDER.md  README.md  REPORT_DaoHongSon_VN.md  TELEMETRY_CHANGES.md  TEMPLATE_INDIVIDUAL_REPORT.md  TEST_REPORT.md  USE_CASES_TEST.md  index.html  main.py  metadata.json  package-lock.json  package.json  pyproject.toml  vite.config.ts
debug-output/: page-results.html  page.html
logs/: compare_2026-04-06T09-38-52.json  compare_2026-04-06T09-38-52.md  compare_2026-04-06T14-33-12.json  compare_2026-04-06T14-33-12.md  compare_2026-04-06T14-33-26.json  compare_2026-04-06T14-33-26.md  compare_2026-04-06T14-33-55.json  compare_2026-04-06T14-33-55.md  compare_2026-04-06T14-34-00.json  compare_2026-04-06T14-34-00.md  compare_2026-04-06T14-37-17.json  compare_2026-04-06T14-37-17.md  compare_2026-04-06T14-39-52.json  compare_2026-04-06T14-39-52.md  session_agent_2026-04-06T08-41-02.jsonl  session_agent_2026-04-06T09-35-16.json  session_agent_2026-04-06T09-35-16.jsonl  session_agent_2026-04-06T09-40-11.jsonl  session_agent_2026-04-06T10-38-41.jsonl  session_agent_2026-04-06T10-39-56.json  session_agent_2026-04-06T14-16-32.jsonl  session_agent_2026-04-06T14-21-10.jsonl  session_agent_2026-04-06T14-22-04.json  session_agent_2026-04-06T14-22-23.jsonl  session_agent_2026-04-06T14-28-26.json  session_agent_2026-04-06T14-28-26.jsonl  session_agent_2026-04-06T14-28-41.jsonl  session_agent_2026-04-06T14-29-17.json  session_agent_2026-04-06T14-32-45.json  session_agent_2026-04-06T14-32-45.jsonl  (+24 more)
(+56 files in other folders)
